[BE] Add endpoints for UserProfile
